--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "build": "bankai build index.js",
     "inspect": "bankai inspect index.js",
-    "start": "bankai start index.js",
+    "start": "budo index.js:bundle.js",
     "test": "standard && test-deps",
-    "test-deps": "dependency-check . && dependency-check . --extra --no-dev -i tachyons"
+    "test-deps": "dependency-check . && dependency-check . --extra --no-dev"
   },
   "dependencies": {
     "choo": "^6.0.0-4",
     "choo-devtools": "^1.3.1",
     "choo-log": "^7.0.1",
     "choo-service-worker": "^2.1.5",
-    "tachyons": "^4.7.4"
+    "xhr": "^2.4.0"
   },
   "devDependencies": {
     "bankai": "^5.0.0-1",
