--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "choo-devtools": "^1.3.1",
     "choo-log": "^7.0.1",
     "choo-service-worker": "^2.1.5",
+    "form-serialize": "^0.7.2",
     "xhr": "^2.4.0"
   },
   "devDependencies": {
