--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "choo-log": "^7.2.1",
     "choo-service-worker": "^2.2.0",
     "form-serialize": "^0.7.2",
-    "xhr": "^2.4.0"
+    "xhr": "^2.4.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "budo": "^10.0.4",
