--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "choo-service-worker": "^2.2.0",
     "form-serialize": "^0.7.2",
     "xhr": "^2.4.0",
+    "xhr-request": "^1.0.1",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
     "budo": "^10.0.4",
-    "standard": "^10.0.2"
+    "standard": "^10.0.2",
+    "tape": "^4.8.0"
   }
 }
