--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "choo-log": "^7.2.1",
     "choo-service-worker": "^2.2.0",
     "form-serialize": "^0.7.2",
+    "nanocomponent": "^6.4.1",
     "xhr": "^2.4.0",
     "xhr-request": "^1.0.1",
     "xtend": "^4.0.1"
